// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferencedEntityDisplay renders 1`] = `
<div>
  <b>
    'Foo Page'
  </b>
</div>
`;

exports[`ReferencedEntityDisplay renders with an undefined entity display 1`] = `
<div>
  <b
    class="undefined-entity"
  >
    Undefined Page
  </b>
</div>
`;
